<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="@string/notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="allownotifications"
            android:title="@string/allow_notifications"
            android:summary="@string/allow_notifications_summary" />

        <ListPreference
            android:defaultValue="3"
            android:key="intervalnotifications"
            android:entries="@array/intervals"
            android:entryValues="@array/intervalsData"
            android:title="@string/interval_notifications_title"
            android:summary="@string/interval_notifications_summary"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/companies"
        android:key="@string/companies"
        android:summary="@string/companies_summary">
    </PreferenceCategory>
</PreferenceScreen>