<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_generalStatus"
            android:icon="@drawable/ic_megaphone"
            android:title="@string/general_status" />
        <item
            android:id="@+id/nav_strikes"
            android:icon="@drawable/ic_megaphone"
            android:title="@string/last_strikes" />
        <item
            android:id="@+id/nav_allStrikes"
            android:icon="@drawable/ic_megaphone"
            android:title="@string/history_strikes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_reportStrike"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/submit_new_strike" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_sendFeedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_share"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
