<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp">

            <TextView
                android:id="@+id/subwayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/lisbon_subway_title_text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/yellow_line_button"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_below="@+id/subwayName"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_rectangle"
                android:clickable="false"
                android:text="@string/yellow"
                android:textColor="@color/buttonTextColor"
                android:textSize="10sp"
                android:visibility="visible"
                tools:backgroundTint="@color/lisbonSubwayLineYellow"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/yellow_line_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/yellow_line_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/ok"
                android:textSize="12sp" />

            <Button
                android:id="@+id/blue_line_button"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_below="@+id/yellow_line_button"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_rectangle"
                android:clickable="false"
                android:text="@string/blue"
                android:textColor="@color/buttonTextColor"
                android:textSize="10sp"
                android:visibility="visible"
                tools:backgroundTint="@color/lisbonSubwayLineBlue"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/blue_line_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/blue_line_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/ok"
                android:textSize="12sp" />

            <Button
                android:id="@+id/green_line_button"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_below="@+id/blue_line_button"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_rectangle"
                android:clickable="false"
                android:text="@string/green"
                android:textColor="@color/buttonTextColor"
                android:textSize="10sp"
                android:visibility="visible"
                tools:backgroundTint="@color/lisbonSubwayLineGreen"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/green_line_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/green_line_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/ok"
                android:textSize="12sp" />

            <Button
                android:id="@+id/red_line_button"
                android:layout_width="90dp"
                android:layout_height="20dp"
                android:layout_below="@+id/green_line_button"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/round_rectangle"
                android:clickable="false"
                android:text="@string/red"
                android:textColor="@color/buttonTextColor"
                android:textSize="10sp"
                android:visibility="visible"
                tools:backgroundTint="@color/lisbonSubwayLineRed"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/red_line_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/red_line_button"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/ok"
                android:textSize="12sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>